--- a/spec/system/actions/nextLineFromSystem.spec.yaml
+++ b/spec/system/actions/nextLineFromSystem.spec.yaml
@@ -52,7 +52,7 @@ out:
           sectionId: "section1"
           lineId: "2"
 ---
-case: advance to next line when auto is enabled (re-queues timer)
+case: advance to next line when auto is enabled with fromStart trigger (re-queues timer)
 in:
   - state:
       global:
@@ -60,6 +60,7 @@ in:
         nextLineConfig:
           auto:
             enabled: true
+            trigger: "fromStart"
             delay: 1500
         pendingEffects: []
       projectData:
@@ -84,6 +85,7 @@ out:
     nextLineConfig:
       auto:
         enabled: true
+        trigger: "fromStart"
         delay: 1500
     pendingEffects:
       - name: "render"
@@ -91,6 +93,61 @@ out:
       - name: "nextLineConfigTimer"
         payload:
           delay: 1500
+  projectData:
+    story:
+      scenes:
+        scene1:
+          sections:
+            section1:
+              lines:
+                - id: "1"
+                - id: "2"
+                - id: "3"
+  contexts:
+    - currentPointerMode: "read"
+      pointers:
+        read:
+          sectionId: "section1"
+          lineId: "2"
+---
+case: advance to next line when auto is enabled with fromComplete trigger (does not re-queue timer)
+in:
+  - state:
+      global:
+        isLineCompleted: true
+        nextLineConfig:
+          auto:
+            enabled: true
+            trigger: "fromComplete"
+            delay: 2000
+        pendingEffects: []
+      projectData:
+        story:
+          scenes:
+            scene1:
+              sections:
+                section1:
+                  lines:
+                    - id: "1"
+                    - id: "2"
+                    - id: "3"
+      contexts:
+        - currentPointerMode: "read"
+          pointers:
+            read:
+              sectionId: "section1"
+              lineId: "1"
+out:
+  global:
+    isLineCompleted: false
+    nextLineConfig:
+      auto:
+        enabled: true
+        trigger: "fromComplete"
+        delay: 2000
+    pendingEffects:
+      - name: "render"
+      - name: "handleLineActions"
   projectData:
     story:
       scenes:
