--- a/spec/system/renderState/addLayeredViews.spec.yaml
+++ b/spec/system/renderState/addLayeredViews.spec.yaml
@@ -86,6 +86,16 @@ out:
       x: 0
       y: 0
       children:
+        - id: "layeredView-0-blocker"
+          type: "rect"
+          fill: "transparent"
+          width: 1920
+          height: 1080
+          x: 0
+          y: 0
+          click:
+            actionPayload:
+              actions: {}
         - type: "text"
           content: "LayeredView content"
   animations: []
@@ -130,6 +140,16 @@ out:
       x: 0
       y: 0
       children:
+        - id: "layeredView-0-blocker"
+          type: "rect"
+          fill: "transparent"
+          width: 1920
+          height: 1080
+          x: 0
+          y: 0
+          click:
+            actionPayload:
+              actions: {}
         - type: "text"
           content: "Menu"
     - id: "layeredView-1"
@@ -137,6 +157,16 @@ out:
       x: 0
       y: 0
       children:
+        - id: "layeredView-1-blocker"
+          type: "rect"
+          fill: "transparent"
+          width: 1920
+          height: 1080
+          x: 0
+          y: 0
+          click:
+            actionPayload:
+              actions: {}
         - type: "image"
           src: "overlay.png"
   animations: []
@@ -177,6 +207,16 @@ out:
       x: 0
       y: 0
       children:
+        - id: "layeredView-1-blocker"
+          type: "rect"
+          fill: "transparent"
+          width: 1920
+          height: 1080
+          x: 0
+          y: 0
+          click:
+            actionPayload:
+              actions: {}
         - type: "text"
           content: "Exists"
   animations: []
@@ -220,6 +260,16 @@ out:
       x: 0
       y: 0
       children:
+        - id: "layeredView-0-blocker"
+          type: "rect"
+          fill: "transparent"
+          width: 1920
+          height: 1080
+          x: 0
+          y: 0
+          click:
+            actionPayload:
+              actions: {}
         - type: "text"
           content: "Animated"
   animations:
@@ -268,6 +318,16 @@ out:
       x: 0
       y: 0
       children:
+        - id: "layeredView-0-blocker"
+          type: "rect"
+          fill: "transparent"
+          width: 1920
+          height: 1080
+          x: 0
+          y: 0
+          click:
+            actionPayload:
+              actions: {}
         - type: "container"
           x: 10
           y: 20
@@ -309,5 +369,15 @@ out:
       type: "container"
       x: 0
       y: 0
-      children: []
+      children:
+        - id: "layeredView-0-blocker"
+          type: "rect"
+          fill: "transparent"
+          width: 1920
+          height: 1080
+          x: 0
+          y: 0
+          click:
+            actionPayload:
+              actions: {}
   animations: []
