Make click blocker not transparent

--- a/spec/system/renderState/addLayeredViews.spec.yaml
+++ b/spec/system/renderState/addLayeredViews.spec.yaml
@@ -88,7 +88,7 @@ out:
       children:
         - id: "layeredView-0-blocker"
           type: "rect"
-          fill: "transparent"
+          fill: "rgba(0, 0, 0, 0.7)"
           width: 1920
           height: 1080
           x: 0
@@ -142,7 +142,7 @@ out:
       children:
         - id: "layeredView-0-blocker"
           type: "rect"
-          fill: "transparent"
+          fill: "rgba(0, 0, 0, 0.7)"
           width: 1920
           height: 1080
           x: 0
@@ -159,7 +159,7 @@ out:
       children:
         - id: "layeredView-1-blocker"
           type: "rect"
-          fill: "transparent"
+          fill: "rgba(0, 0, 0, 0.7)"
           width: 1920
           height: 1080
           x: 0
@@ -209,7 +209,7 @@ out:
       children:
         - id: "layeredView-1-blocker"
           type: "rect"
-          fill: "transparent"
+          fill: "rgba(0, 0, 0, 0.7)"
           width: 1920
           height: 1080
           x: 0
@@ -262,7 +262,7 @@ out:
       children:
         - id: "layeredView-0-blocker"
           type: "rect"
-          fill: "transparent"
+          fill: "rgba(0, 0, 0, 0.7)"
           width: 1920
           height: 1080
           x: 0
@@ -320,7 +320,7 @@ out:
       children:
         - id: "layeredView-0-blocker"
           type: "rect"
-          fill: "transparent"
+          fill: "rgba(0, 0, 0, 0.7)"
           width: 1920
           height: 1080
           x: 0
@@ -372,7 +372,7 @@ out:
       children:
         - id: "layeredView-0-blocker"
           type: "rect"
-          fill: "transparent"
+          fill: "rgba(0, 0, 0, 0.7)"
           width: 1920
           height: 1080
           x: 0
